fix: improved modal scrollbar style

--- a/frontend/src/assets/styles/production/components/modals.scss
+++ b/frontend/src/assets/styles/production/components/modals.scss
@@ -6,6 +6,22 @@
         width: calc(100% - 2rem) !important;
         border-radius: .5rem;
 
+        &::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        &::-webkit-scrollbar-track {
+            border-radius: 8px;
+            background-color: whitesmoke;
+            border: 1px solid lightgrey;
+            box-shadow: inset 0 0 6px lightgrey;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            border-radius: 8px;
+            background-color: #3297c2;
+        }
+
         .modal-full {
             .modal-header-container {
                 display: flex;
